Added Q1 for Set 2

--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -48,7 +48,8 @@ Questions begin on the next page.
 \setcounter{page}{1}
 
 \begin{enumerate}
-    \item % WRITE QUESTIONS HERE
+    % Question 1
+    \item \textbf{MATH} \\ \textit{These} processes are called greedy if they always make the locally optimal choice. Turing machines can execute any of \textit{these} processes. Big O notation is used to describe the time and space complexity of \textit{these} processes. For 10 points, name \textit{these} step-by-step sequences of unambiguous instructions that can be used to perform a computation. \\ ANSWER: \underline{algorithm} [prompt on \textit{program}] \backtrack
 \end{enumerate}
 
 
