--- a/Rules/Rules.tex
+++ b/Rules/Rules.tex
@@ -1,5 +1,5 @@
 \thispagestyle{empty}
-The following are notes for moderators. Please note that these are general rules and may be overriden by questions when indicated.
+The following are notes for moderators. Please note that these rules may be overriden by questions when indicated.
 
 \vspace*{0.3 cm}
 On reading
