Added Q2 for S2. Added Microtype to both sets.

--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -6,6 +6,7 @@
 \usepackage{xcolor}
 \usepackage{import}
 \usepackage{pdfpages}
+\usepackage{microtype}
 
 
 \usepackage{geometry}
@@ -50,6 +51,15 @@ Questions begin on the next page.
 \begin{enumerate}
     % Question 1
     \item \textbf{MATH} \\ \textit{These} processes are called greedy if they always make the locally optimal choice. Turing machines can execute any of \textit{these} processes. Big O notation is used to describe the time and space complexity of \textit{these} processes. For 10 points, name \textit{these} step-by-step sequences of unambiguous instructions that can be used to perform a computation. \\ ANSWER: \underline{algorithm} [prompt on \textit{program}] \backtrack
+    \item \textbf{MISCELLANEOUS} \\ Name \textit{these} 1990s bands with prominent drummers. For 10 points each,
+    \begin{enumerate}[label=\Alph*]
+        \item Dave Grohl drummed on hits like \textit{Heart-Shaped Box} and \textit{Smells Like Teen Spirit} for \textit{this} band. He went on to form the Foo Fighters after the suicide of \textit{this} band’s lead singer, Kurt Cobain. \\ ANSWER: \underline{Nirvana}
+        \item Tré Cool replaced John Kiffmeyer in 1990 as \textit{this} band's drummer. He drummed in hits like \textit{Brain Stew}, \textit{American Idiot}, and \textit{Know Your Enemy}. \\ ANSWER: \underline{Green Day}
+        \item Chad Smith drummed for \textit{this} band since 1988, producing hits such as \textit{Snow}, \textit{Under the Bridge}, and \textit{Californication}. \\ ANSWER: \underline{Red Hot Chili Peppers}
+    \end{enumerate}
+
+    % Question 2
+    
 \end{enumerate}
 
 
