--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -59,7 +59,16 @@ Questions begin on the next page.
     \end{enumerate}
 
     % Question 2
-    
+    \item \textbf{SOCIAL SCIENCE} \\ Plato once referred to \textit{these} animals as ``the only featherless bipeds with broad, flat nails.'' A philosophical stance named after \textit{these} animals was pioneered by Petrarch. Friedrich Nietzsche \colorbox{lightGray}{[Neet\textperiodcentered shuh]} claimed that \textit{these} animals killed God. For 10 points, name \textit{these} animals which were often the subject of Italian Renaissance art like the Mona Lisa. \\ ANSWER: \underline{human}s \backtrack
+    \item \textbf{SCIENCE} \\ In mechanical physics, almost all translation quantities have rotational analogues. Name the following quantities and operations used in rotational mechanics.
+    \begin{enumerate}[label=\Alph*]
+        \item \textit{This} quantity is the rotational analogue of force. When a force is applied perpendicular to a lever arm, \textit{this} quantity is the force applied multiplied by the lever arm. \\ ANSWER: \underline{torque}
+        \item Torque is the rotational analogue of force. Therefore, by Newton's Second Law, it is also equal to angular acceleration multiplied by \textit{this} quantity. \\ ANSWER: \underline{rotational inertia} [also accept \underline{moment of inertia}, \underline{angular mass}, \underline{rotational mass}, or \underline{second moment of mass}]
+        \item When the force and lever arm vectors are not orthogonal, \textit{this} vector operation must be used to find torque. Unlike the dot product, this operation yields a vector. \\ ANSWER: \underline{cross} product
+    \end{enumerate} 
+
+    % Question 3
+    \item 
 \end{enumerate}
 
 
