--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -59,16 +59,22 @@ Questions begin on the next page.
     \end{enumerate}
 
     % Question 2
-    \item \textbf{SOCIAL SCIENCE} \\ Plato once referred to \textit{these} animals as ``the only featherless bipeds with broad, flat nails.'' A philosophical stance named after \textit{these} animals was pioneered by Petrarch. Friedrich Nietzsche \colorbox{lightGray}{[Neet\textperiodcentered shuh]} claimed that \textit{these} animals killed God. For 10 points, name \textit{these} animals which were often the subject of Italian Renaissance art like the Mona Lisa. \\ ANSWER: \underline{human}s \backtrack
+    \item \textbf{SOCIAL SCIENCE} \\ Plato once referred to \textit{these} animals as ``the only featherless bipeds with broad, flat nails.'' A philosophical stance named after \textit{these} animals was pioneered by Petrarch. Friedrich Nietzsche \colorbox{lightGray}{[\textbf{Neet}\textperiodcentered shuh]} claimed that \textit{these} animals killed God. For 10 points, name \textit{these} animals which were often the subject of Italian Renaissance art like the \textit{Mona Lisa}. \\ ANSWER: \underline{human}s \backtrack
     \item \textbf{SCIENCE} \\ In mechanical physics, almost all translation quantities have rotational analogues. Name the following quantities and operations used in rotational mechanics.
     \begin{enumerate}[label=\Alph*]
-        \item \textit{This} quantity is the rotational analogue of force. When a force is applied perpendicular to a lever arm, \textit{this} quantity is the force applied multiplied by the lever arm. \\ ANSWER: \underline{torque}
+        \item \textit{This} quantity is the rotational analogue of force. When a force is applied perpendicular to a lever arm, \textit{this} quantity is the force applied multiplied by the distance to the pivot. \\ ANSWER: \underline{torque}
         \item Torque is the rotational analogue of force. Therefore, by Newton's Second Law, it is also equal to angular acceleration multiplied by \textit{this} quantity. \\ ANSWER: \underline{rotational inertia} [also accept \underline{moment of inertia}, \underline{angular mass}, \underline{rotational mass}, or \underline{second moment of mass}]
         \item When the force and lever arm vectors are not orthogonal, \textit{this} vector operation must be used to find torque. Unlike the dot product, this operation yields a vector. \\ ANSWER: \underline{cross} product
     \end{enumerate} 
 
     % Question 3
-    \item 
+    \item \textbf{HISTORY} \\ During the War of 1812, \textit{this} poet watched from a British ship as the American troops in Fort McHenry raised their flag. Abolitionists criticized \textit{this} poet's words that America was the land of the free\textemdash instead referring to it as ``the land of the free and the home of the oppressed.'' On March 26, 2024, a Baltimore bridge named after \textit{this} poet collapsed. For 10 points, name \textit{this} poet who wrote \textit{Star-Spangled Banner}, which later became the US national anthem. \\ ANSWER: Francis Scott \underline{Key} \backtrack
+    \item \textbf{MISCELLANEOUS} \\ In French culinary theory, there are \textit{mother} sauces from which many other \textit{daughter} sauces are derived. Name the following mother sauces by the daughter sauces they're used to make. For 10 points each,
+    \begin{enumerate}[label=\Alph*]
+        \item \textit{This} mother sauce is the base for salsas and many pasta dishes. \\ ANSWER: \underline{tomato} sauce
+        \item \textit{This} mother sauce is the base for tartar sauce and ranch dressing. \\ ANSWER: \underline{mayo}nnaise
+        \item \textit{This} mother sauce is the base for foyot \colorbox{lightGray}{[foe\textperiodcentered \textbf{yote}]} sauce. \\ ANSWER: \underline{hollandaise} sauce
+    \end{enumerate}
 \end{enumerate}
 
 
