Added Q4 toss-up

--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -50,7 +50,7 @@ Questions begin on the next page.
 
 \begin{enumerate}
     % Question 1
-    \item \textbf{MATH} \\ \textit{These} processes are called greedy if they always make the locally optimal choice. Turing machines can execute any of \textit{these} processes. Big O notation is used to describe the time and space complexity of \textit{these} processes. For 10 points, name \textit{these} step-by-step sequences of unambiguous instructions that can be used to perform a computation. \\ ANSWER: \underline{algorithm} [prompt on \textit{program}] \backtrack
+    \item \textbf{MATH} \\ \textit{These} processes are called greedy if they always make the locally optimal choice. Turing machines can execute any of \textit{these} processes. Big O notation (*) is used to describe the time and space complexity of \textit{these} processes. For 10 points, name \textit{these} finite, step-by-step sequences of unambiguous instructions that can be used to perform a computation. \\ ANSWER: \underline{algorithm} [prompt on \textit{program}] \backtrack
     \item \textbf{MISCELLANEOUS} \\ Name \textit{these} 1990s bands with prominent drummers. For 10 points each,
     \begin{enumerate}[label=\Alph*]
         \item Dave Grohl drummed on hits like \textit{Heart-Shaped Box} and \textit{Smells Like Teen Spirit} for \textit{this} band. He went on to form the Foo Fighters after the suicide of \textit{this} band’s lead singer, Kurt Cobain. \\ ANSWER: \underline{Nirvana}
@@ -59,7 +59,7 @@ Questions begin on the next page.
     \end{enumerate}
 
     % Question 2
-    \item \textbf{SOCIAL SCIENCE} \\ Plato once referred to \textit{these} animals as ``the only featherless bipeds with broad, flat nails.'' A philosophical stance named after \textit{these} animals was pioneered by Petrarch. Friedrich Nietzsche \colorbox{lightGray}{[\textbf{Neet}\textperiodcentered shuh]} claimed that \textit{these} animals killed God. For 10 points, name \textit{these} animals which were often the subject of Italian Renaissance art like the \textit{Mona Lisa}. \\ ANSWER: \underline{human}s \backtrack
+    \item \textbf{SOCIAL SCIENCE} \\ Plato once referred to \textit{these} animals as ``the only featherless bipeds with broad, flat nails (*).'' A philosophical stance named after \textit{these} animals was pioneered by Petrarch. Friedrich Nietzsche \colorbox{lightGray}{[\textbf{Neet}\textperiodcentered shuh]} claimed that \textit{these} animals killed God. For 10 points, name \textit{these} animals which were often the subject of Italian Renaissance art like the \textit{Mona Lisa}. \\ ANSWER: \underline{human}s \backtrack
     \item \textbf{SCIENCE} \\ In mechanical physics, almost all translation quantities have rotational analogues. Name the following quantities and operations used in rotational mechanics.
     \begin{enumerate}[label=\Alph*]
         \item \textit{This} quantity is the rotational analogue of force. When a force is applied perpendicular to a lever arm, \textit{this} quantity is the force applied multiplied by the distance to the pivot. \\ ANSWER: \underline{torque}
@@ -68,13 +68,17 @@ Questions begin on the next page.
     \end{enumerate} 
 
     % Question 3
-    \item \textbf{HISTORY} \\ During the War of 1812, \textit{this} poet watched from a British ship as the American troops in Fort McHenry raised their flag. Abolitionists criticized \textit{this} poet's words that America was the land of the free\textemdash instead referring to it as ``the land of the free and the home of the oppressed.'' On March 26, 2024, a Baltimore bridge named after \textit{this} poet collapsed. For 10 points, name \textit{this} poet who wrote \textit{Star-Spangled Banner}, which later became the US national anthem. \\ ANSWER: Francis Scott \underline{Key} \backtrack
+    \item \textbf{HISTORY} \\ During the War of 1812, \textit{this} poet watched from a British ship as the American troops in Fort McHenry raised their flag (*). Abolitionists criticized \textit{this} poet's words that America was the land of the free\textemdash instead referring to it as ``the land of the free and the home of the oppressed.'' On March 26, 2024, a Baltimore bridge named after \textit{this} poet collapsed. For 10 points, name \textit{this} poet who wrote \textit{The Star-Spangled Banner}, which later became the US national anthem. \\ ANSWER: Francis Scott \underline{Key} \backtrack
     \item \textbf{MISCELLANEOUS} \\ In French culinary theory, there are \textit{mother} sauces from which many other \textit{daughter} sauces are derived. Name the following mother sauces by the daughter sauces they're used to make. For 10 points each,
     \begin{enumerate}[label=\Alph*]
         \item \textit{This} mother sauce is the base for salsas and many pasta dishes. \\ ANSWER: \underline{tomato} sauce
         \item \textit{This} mother sauce is the base for tartar sauce and ranch dressing. \\ ANSWER: \underline{mayo}nnaise
-        \item \textit{This} mother sauce is the base for foyot \colorbox{lightGray}{[foe\textperiodcentered \textbf{yote}]} sauce. \\ ANSWER: \underline{hollandaise} sauce
+        \item \textit{This} mother sauce is the base for foyot \colorbox{lightGray}{[foe\textperiodcentered \textbf{yote}]} sauce and is often served with Eggs Benedict. \\ ANSWER: \underline{hollandaise} sauce
     \end{enumerate}
+
+    % Question 4
+    \item \textbf{LITERATURE} \\ In \textit{this} cautionary tale, Oceania, Eurasia, and Eastasia are constantly at war, which Emmanuel Goldstein believes is the only way to maintain peace. In \textit{this} novel, Winston Smith is betrayed and captured by members of the Thought Police (*) who turn him in to the Party. Four government agencies in \textit{this} novel are ironically named the ministries of truth, peace, love, and plenty. For 10 points, name \textit{this} dystopian novel about totalitarianism, written by George Orwell, which popularized terms such as \textit{thoughtcrime}, \textit{doublethink}, and \textit{Big Brother}. \\ ANSWER: \underline{Nineteen Eighty-Four}
+    \item \textbf{SOCIAL SCIENCE}
 \end{enumerate}
 
 
