Added other option to R1S1Q10

--- a/Round-1-Set-1/Scholastic Bowl Round 1 Set 1 Questions.tex
+++ b/Round-1-Set-1/Scholastic Bowl Round 1 Set 1 Questions.tex
@@ -134,12 +134,12 @@ Questions begin on the next page.
     \end{enumerate}
 
     % Question 10
-    \item \textbf{SCIENCE} \\ \textit{This} organelle used to be a free-living prokaryote and is thought to have become part of eukaryotic cells by endosymbiosis. \textit{This} organelle has a double membrane and uses aerobic respiration to generate ATP for its cell. The Krebs cycle takes place in the matrix of \textit{this} organelle (*). For 10 points, name \textit{this} organelle which is commonly referred to as ``the powerhouse of the cell.'' \\ ANSWER: \underline{mitochondrion} \backtrack
+    \item \textbf{SCIENCE} \\ \textit{This} organelle used to be a free-living prokaryote and is thought to have become part of eukaryotic cells by endosymbiosis. \textit{This} organelle has a double membrane and uses aerobic respiration to generate ATP for its cell. The Krebs cycle takes place in the matrix of \textit{this} organelle (*). For 10 points, name \textit{this} organelle which is commonly referred to as ``the powerhouse of the cell.'' \\ ANSWER: \underline{mitochondrion} [also accept \underline{chloroplast} until ``aerobic'' is read] \backtrack
     \item \textbf{SOCIAL SCIENCE} \\ World War One was caused by a plethora of factors. For 10 points each,
     \begin{enumerate}[label=\Alph*]
         \item The acronym MAIN is used to help students remember the four main causes of World War One. The letters stand for militarism, alliances, imperialism, and \textit{this} fourth cause which is defined as pride for one's own country. \\ ANSWER: \underline{nationalism}
         \item The four previous causes are broad and long-term. The immediate cause of World War One was Gavrilo Princip's assassination of \textit{this} Archduke. \\ ANSWER: Archduke \underline{Franz Ferdinand}
-        \item \textit{This} German Chancellor used \textit{realpolitik} to weave the elaborate alliance system that held Europe together before World War One. When \textit{he} was fired by William II, the alliance system crumbled, which was a major cause of World War One. \\ ANSWER: Otto von \underline{Bismarck}
+        \item \textit{This} German Chancellor used \textit{realpolitik} to weave the elaborate alliance system that held Europe together before World War One. When he was fired by William II, the alliance system crumbled, which was a major cause of World War One. \\ ANSWER: Otto von \underline{Bismarck}
     \end{enumerate}
 \end{enumerate}
 
