--- a/Round-1-Set-1/Scholastic Bowl Round 1 Set 1 Questions.tex
+++ b/Round-1-Set-1/Scholastic Bowl Round 1 Set 1 Questions.tex
@@ -88,7 +88,7 @@ Questions begin on the next page.
     \end{enumerate}
 
     % Question 5
-    \item \textbf{SCIENCE} \\ Real-world examples of \textit{these} objects have a nonzero mass, so their rotational inertia is their mass multiplied by the square of their radius. When \textit{these} objects have zero mass, as in the theoretical Atwood machine, they are (*) considered \textit{ideal}. For 10 points, name \textit{this} machine that derives its mechanical advantage by reversing the direction of input force with a rope suspended over a wheel. \\ ANSWER: \underline{pulley} \backtrack
+    \item \textbf{SCIENCE} \\ Real-world examples of \textit{these} objects have a nonzero mass, so their rotational inertia is their mass multiplied by the square of their radius. When \textit{these} objects have zero mass, as in the theoretical Atwood machine, they are (*) considered \textit{ideal}. For 10 points, name \textit{this} machine that derives its mechanical advantage by reversing the direction of effort with a rope suspended over a wheel. \\ ANSWER: \underline{pulley} \backtrack
     \item \textbf{SOCIAL SCIENCE} \\ Zeno of Elea was famous for posing \textit{this} type of thought experiment. For 10 points each,
     \begin{enumerate}[label=\Alph*]
         \item Name \textit{these} statements in which two pieces of seemingly sound logic lead to a contradiction. \\ ANSWER: \underline{paradox}
