--- a/Round-1-Set-1/Scholastic Bowl Round 1 Set 1 Questions.tex
+++ b/Round-1-Set-1/Scholastic Bowl Round 1 Set 1 Questions.tex
@@ -74,7 +74,7 @@ Questions begin on the next page.
     \item \textbf{SCIENCE} \\ Every quantity you can think of can be expressed in terms of SI units. Name the following quantities by their definition in SI units. For example, if I said \textit{meters per second}, you would answer \textit{speed} or \textit{velocity}\textemdash both are acceptable. For 10 points each,
     \begin{enumerate}[label=\Alph*]
         \item \textit{This} quantity is measured in inverse seconds. \\ ANSWER: \underline{frequency} [do \textbf{not} accept or prompt on \textit{hertz}]
-        \item \textit{This} quantity is measured in ampere-seconds. \\ ANSWER: \underline{charge} [do \textbf{not} accept or prompt on \textit{coulomb}]
+        \item \textit{This} quantity is measured in ampere-seconds. \\ ANSWER: electric \underline{charge} [do \textbf{not} accept or prompt on \textit{coulomb}]
         \item \textit{This} quantity is measured in kilogram-meters per second squared. \\ ANSWER: \underline{force} [do \textbf{not} accept or prompt on \textit{newton}]
     \end{enumerate}
 
