--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -64,7 +64,7 @@ Questions begin on the next page.
     \begin{enumerate}[label=\Alph*]
         \item \textit{This} quantity is the rotational analogue of force. When a force is applied perpendicular to a lever arm, \textit{this} quantity is the force applied multiplied by the distance to the pivot. \\ ANSWER: \underline{torque}
         \item Torque is the rotational analogue of force. Therefore, by Newton's Second Law, it is also equal to angular acceleration multiplied by \textit{this} quantity. \\ ANSWER: \underline{rotational inertia} [also accept \underline{moment of inertia}, \underline{angular mass}, \underline{rotational mass}, or \underline{second moment of mass}]
-        \item When the force and lever arm vectors are not orthogonal, \textit{this} vector operation must be used to find torque. Unlike the dot product, this operation yields a vector. \\ ANSWER: \underline{cross} product
+        \item When the force and lever arm vectors are not perpendicular, \textit{this} vector operation must be used to find torque. Unlike the dot product, this operation yields a vector. \\ ANSWER: \underline{cross} product
     \end{enumerate} 
 
     % Question 3
@@ -77,13 +77,17 @@ Questions begin on the next page.
     \end{enumerate}
 
     % Question 4
-    \item \textbf{LITERATURE} \\ In \textit{this} cautionary tale, Oceania, Eurasia, and Eastasia are constantly at war, which Emmanuel Goldstein believes is the only way to maintain peace. In \textit{this} novel, Winston Smith is betrayed and captured by members of the Thought Police (*) who turn him in to the Party. Four government agencies in \textit{this} novel are ironically named the ministries of truth, peace, love, and plenty. For 10 points, name \textit{this} dystopian novel about totalitarianism, written by George Orwell, which popularized terms such as \textit{thoughtcrime}, \textit{doublethink}, and \textit{Big Brother}. \\ ANSWER: \underline{Nineteen Eighty-Four} \backtrack
+    \item \textbf{LITERATURE} \\ In \textit{this} cautionary tale, Oceania, Eurasia, and Eastasia are constantly at war, which Emmanuel Goldstein believes is the only way to maintain peace. In \textit{this} novel, Winston Smith is betrayed and captured by secret members of the Thought Police (*) who turn him in to the Party. Four government agencies in \textit{this} novel are ironically named the ministries of truth, peace, love, and plenty. For 10 points, name \textit{this} dystopian novel about totalitarianism, written by George Orwell, which popularized terms such as \textit{thoughtcrime}, \textit{doublethink}, and \textit{Big Brother}. \\ ANSWER: \underline{Nineteen Eighty-Four} \backtrack
     \item \textbf{SCIENCE} \\ Every quantity you can think of can be expressed in terms of SI units. Name the following quantities by their definition in SI units. For example, if I said \textit{meters per second}, you would answer \textit{speed} or \textit{velocity}\textemdash both are acceptable. For 10 points each,
     \begin{enumerate}[label=\Alph*]
         \item \textit{This} quantity is measured in meters cubed. \\ ANSWER: \underline{volume} [do \textbf{not} accept or prompt on \textit{liter}]
         \item \textit{This} quantity is measured in ampere-seconds. \\ ANSWER: electric \underline{charge} [do \textbf{not} accept or prompt on \textit{coulomb}]
-        \item \textit{This} quantity is measured in kilogram-meters squared per second squared. \\ ANSWER: \underline{energy} [also accept \underline{work} or \underline{heat} (but \textbf{not} \textit{temperature}); do \textbf{not} accept or prompt on \textit{joule}]
-    \end{enumerate}
+        \item \textit{This} quantity is measured in kilogram-meters squared per second squared. \\ ANSWER: \underline{energy} [also accept \underline{work} or \underline{torque} or \underline{heat} (but \textbf{not} \textit{temperature}); do \textbf{not} accept or prompt on \textit{joule}]
+    \end{enumerate} 
+
+    % Question 4
+    \item \textbf{HISTORY}
+
 \end{enumerate}
 
 
