--- a/Rules/Rules.tex
+++ b/Rules/Rules.tex
@@ -7,7 +7,7 @@ On reading
     \item Where appropriate, pronunciation guides have been provided.
     \item The moderator is to read each question exactly as written, emphasizing italicized words.
     \item When a player buzzes in, the moderator is to immediately stop reading.
-    \item The moderator must use a consistent and reasonably slow reading pace. The moderator must also speak intelligibly and loud enough that all players can hear the question in its entirety. Players may stop the moderator at any time to request that the moderator speak louder or more clearly.
+    \item The moderator must use a consistent and reasonably slow reading pace. The moderator must speak intelligibly and loud enough for all players to hear the question in its entirety. Players may stop the moderator at any time to request that the moderator speak louder or more clearly.
 \end{itemize}
 
 \vspace*{0.3 cm}
