Changed wording and sample question

--- a/Rules/Player Notes/Player Notes.tex
+++ b/Rules/Player Notes/Player Notes.tex
@@ -73,12 +73,12 @@ On powerplays
 \end{itemize}
 
 \vspace*{0.3 cm}
-A sample toss-up question is given below.
+A sample toss-up question is shown below.
 
 \begin{mdframed}[style=sample]
 \begin{enumerate}
     \setcounter{enumi}{7}
-    \item \textbf{SCIENCE} \\ Examples of \textit{these} objects are Apophis \colorbox{lightGray}{[Uh\textperiodcentered\textbf{pah}\textperiodcentered fiss]} and 2022 AE1. Most of \textit{these} objects are located between 2 and 4 astronomical units from the Sun. Some of the largest examples of \textit{these} objects are Hygiea \colorbox{lightGray}{[Hye\textperiodcentered\textbf{jee}\textperiodcentered uh]}, Pallas, and Vesta. For 10 points, name \textit{these} rocky objects that are mostly located in a belt between Mars and Jupiter. \\ ANSWER: \underline{asteroid} [also accept \underline{minor planet} or \underline{planetoid}; do \textbf{not} accept or prompt on \textit{dwarf planet} or \textit{planet} alone]
+    \item \textbf{SCIENCE} \\ The release of energy in \textit{these} events is described by elastic-rebound theory. \textit{These} events are detected by triangulation of P and S waves. The modified Mercalli scale measures the (*) intensity of \textit{these} events, unlike a logarithmic scale for their magnitude, which is named for Charles Richter. \textit{These} events begin at an epicenter and can cause tsunamis. For 10 points, name \textit{these} natural disasters that are caused by rupturing faults in the crust. \\ ANSWER: \underline{earthquake}
 \end{enumerate}
 \end{mdframed}
 
