--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -91,7 +91,7 @@ Questions begin on the next page.
     \begin{enumerate}[label=\Alph*]
         \item Among those who rebelled was \textit{this} German priest who was tried in the Diet of Worms for nailing his \textit{Ninety-five Theses} to the door of a Catholic Church. In doing so, he founded a namesake religion. \\ ANSWER: \underline{Martin Luther} [also accept \underline{Lutheranism}]
         \item In his \textit{Ninety-five Theses}, Martin Luther argues against the effectiveness of \textit{these} items sold by the Catholic Church. Johann Tetzel claimed that these items could be bought to relieve a Catholic from common sins. \\ ANSWER: \underline{indulgence}
-        \item Although theologians like Jan Hus \colorbox{lightGray}{[Yaan Hoose]} had similar ideas, Martin Luther's movement found great success because his message was spread throughout Europe by \textit{this} newly-invented device. \\ ANSWER: Gutenberg \underline{printing press}
+        \item Although theologians like Jan Hus \colorbox{lightGray}{[Yaan Hoose]} had similar ideas, Martin Luther's movement found great success because his message was spread throughout Europe by \textit{this} newly-invented device. \\ ANSWER: \underline{printing press}
     \end{enumerate}
 
 \end{enumerate}
