Adjusted grammar in Bonus 5

--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -87,10 +87,10 @@ Questions begin on the next page.
 
     % Question 5
     \item \textbf{SOCIAL SCIENCE} \\ \textit{This} company, formerly known as \textit{Real-Time Cures} was exposed by John Ioannidis for its exaggerated claims. In response to growing skepticism, executives at \textit{this} company invited Vice President Joe Biden to tour its facilities. Although Joe Biden initially praised the lab, it was later found that the facility was fake and used only to lure investors. Elizabeth Holmes, the CEO of \textit{this} company, claimed its technology could perform thirty distinct tests on a single drop of blood. For 10 points, name \textit{this} fraudulent company whose name is derived from a combination of the words \textit{therapy} and \textit{diagnosis}. \\ ANSWER: \underline{Theranos} \backtrack
-    \item \textbf{HISTORY} \\ Ulrich Zwingli and John Calvin, among others, rebelled against Catholicism in the Protestant Reformation that started in the 1500s. For 10 points each,
+    \item \textbf{HISTORY} \\ Ulrich Zwingli and John Calvin, among others, rebelled against Catholicism in the Protestant Reformation that began in the 1500s. For 10 points each,
     \begin{enumerate}[label=\Alph*]
         \item Among those who rebelled was \textit{this} German priest who was tried in the Diet of Worms for nailing his \textit{Ninety-five Theses} to the door of a Catholic Church. In doing so, he founded a namesake religion. \\ ANSWER: \underline{Martin Luther} [also accept \underline{Lutheranism}]
-        \item In his \textit{Ninety-five Theses}, Martin Luther argues against the effectiveness of \textit{these} items sold by the Catholic Church. Johann Tetzel claimed that these items could be bought to relieve a Catholic from common sins. \\ ANSWER: \underline{indulgence}
+        \item In his \textit{Ninety-five Theses}, Martin Luther argues against the effectiveness of \textit{these} items sold by the Catholic Church. Johann Tetzel claimed that these items could be bought to relieve a Catholic from common sins. \\ ANSWER: \underline{indulgence}s
         \item Although theologians like Jan Hus \colorbox{lightGray}{[Yaan Hoose]} had similar ideas, Martin Luther's movement found great success because his message was spread throughout Europe by \textit{this} newly-invented device. \\ ANSWER: \underline{printing press}
     \end{enumerate}
 
