--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -77,7 +77,7 @@ Questions begin on the next page.
     \end{enumerate}
 
     % Question 4
-    \item \textbf{LITERATURE} \\ In \textit{this} cautionary novel, Oceania, Eurasia, and Eastasia are constantly at war, which Emmanuel Goldstein believes is the only way to maintain peace. In \textit{this} novel, Winston Smith is betrayed and captured by secret members of the Thought Police (*) who turn him in to the Party. Four government agencies in \textit{this} novel are ironically named the ministries of truth, peace, love, and plenty. For 10 points, name \textit{this} dystopian novel about totalitarianism, written by George Orwell, which popularized terms such as \textit{thoughtcrime}, \textit{doublethink}, and \textit{Big Brother}. \\ ANSWER: \underline{Nineteen Eighty-Four} \backtrack
+    \item \textbf{LITERATURE} \\ In \textit{this} cautionary novel, Oceania, Eurasia, and Eastasia are constantly at war, which Emmanuel Goldstein believes is the only way to maintain peace. In \textit{this} novel, Winston Smith is betrayed and captured by secret members of the Thought Police (*) who turn him in to the Party. Four government agencies in \textit{this} novel are ironically named the Ministries of Truth, Peace, Love, and Plenty. For 10 points, name \textit{this} dystopian novel about totalitarianism, written by George Orwell, which popularized terms such as \textit{thoughtcrime}, \textit{doublethink}, and \textit{Big Brother}. \\ ANSWER: \underline{Nineteen Eighty-Four} \backtrack
     \item \textbf{SCIENCE} \\ Every quantity you can think of can be expressed in terms of SI units. Name the following quantities by their definition in SI units. For example, if I said \textit{meters per second}, you would answer \textit{speed} or \textit{velocity}\textemdash both are acceptable. For 10 points each,
     \begin{enumerate}[label=\Alph*]
         \item \textit{This} quantity is measured in meters cubed. \\ ANSWER: \underline{volume} [do \textbf{not} accept or prompt on \textit{liter}]
@@ -86,13 +86,16 @@ Questions begin on the next page.
     \end{enumerate} 
 
     % Question 5
-    \item \textbf{SOCIAL SCIENCE} \\ \textit{This} company, formerly known as \textit{Real-Time Cures} was exposed by John Ioannidis for its exaggerated claims. In response to growing skepticism, executives at \textit{this} company invited Vice President Joe Biden to tour its facilities. Although Joe Biden initially praised the lab, it was later found that the facility was fake and used only to lure investors. Elizabeth Holmes, the CEO of \textit{this} company, claimed its technology could perform thirty distinct tests on a single drop of blood. For 10 points, name \textit{this} fraudulent company whose name is derived from a combination of the words \textit{therapy} and \textit{diagnosis}. \\ ANSWER: \underline{Theranos} \backtrack
+    \item \textbf{SOCIAL SCIENCE} \\ \textit{This} company, formerly known as \textit{Real-Time Cures} was exposed by John Ioannidis for its exaggerated claims. In response to growing skepticism, executives at \textit{this} company invited Vice President Joe Biden to tour its facilities. Although Joe Biden initially praised the lab, it was later found that the facility was fake and used only to lure investors. Elizabeth Holmes, the CEO of \textit{this} company, claimed its technology could perform thirty distinct tests on a single drop of blood (*). For 10 points, name \textit{this} fraudulent company whose name is derived from a combination of the words \textit{therapy} and \textit{diagnosis}. \\ ANSWER: \underline{Theranos} \backtrack
     \item \textbf{HISTORY} \\ Ulrich Zwingli and John Calvin, among others, rebelled against Catholicism in the Protestant Reformation that began in the 1500s. For 10 points each,
     \begin{enumerate}[label=\Alph*]
         \item Among those who rebelled was \textit{this} German priest who was tried in the Diet of Worms for nailing his \textit{Ninety-five Theses} to the door of a Catholic Church. In doing so, he founded a namesake religion. \\ ANSWER: \underline{Martin Luther} [also accept \underline{Lutheranism}]
         \item In his \textit{Ninety-five Theses}, Martin Luther argues against the effectiveness of \textit{these} items sold by the Catholic Church. Johann Tetzel claimed that these items could be bought to relieve a Catholic from common sins. \\ ANSWER: \underline{indulgence}s
         \item Although theologians like Jan Hus \colorbox{lightGray}{[Yaan Hoose]} had similar ideas, Martin Luther's movement found great success because his message was spread throughout Europe by \textit{this} newly-invented device. \\ ANSWER: \underline{printing press}
     \end{enumerate}
+
+    % Question 6
+    \item \textbf{SCIENCE}
 
 \end{enumerate}
 
