--- a/Rules/Rules.tex
+++ b/Rules/Rules.tex
@@ -28,5 +28,5 @@ On powerplays
 \begin{itemize}
     \item All toss-up questions contain the symbol \underline{(*)} which indicates the \textit{powerplay} cutoff.
     \item When a toss-up is answered before the powerplay cutoff, the team which answered receives 15 (instead of 10) points for that toss-up.
-    \item In the event that a player buzzes in before the powerplay cutoff, but the moderator stops reading too late, the powerplay bonus is awarded based on when the player buzzes in, not when the moderator stops reading.
+    \item The powerplay bonus is awarded by whether the competitor buzzes in before the powerplay cutoff, not when the moderator stops reading.
 \end{itemize}
