--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -95,7 +95,13 @@ Questions begin on the next page.
     \end{enumerate}
 
     % Question 6
-    \item \textbf{SCIENCE} \\ \textit{This} interaction is, by far, the weakest of the four fundamental interactions. Like the electrostatic force, \textit{this} interaction has infinite range. In his general theory of relativity, Einstein showed that \textit{this} interaction was not a force, but rather the result of the curvature of spacetime. On Earth's surface, \textit{this} interaction's constant of acceleration is 9.8 meters per second squared. For 10 points, name \textit{this} interation which gives weight to all objects on Earth. \\ ANSWER: \underline{gravity}
+    \item \textbf{SCIENCE} \\ \textit{This} interaction is, by far, the weakest of the four fundamental interactions. Like the electrostatic force, \textit{this} interaction has infinite range. In his general theory of relativity, Einstein showed that \textit{this} interaction was not a force, but rather the result of the curvature of spacetime. On Earth's surface, \textit{this} interaction's constant of acceleration is 9.8 meters per second squared. For 10 points, name \textit{this} interation which gives weight to all objects on Earth. \\ ANSWER: \underline{gravity} \backtrack
+    \item \textbf{FINE ARTS} \\ Name the following structures in Greco-Roman architecture. For 10 points each,
+    \begin{enumerate}[label=\Alph*]
+        \item \textit{These} structures can be built in the Doric, Ionic, or Corinthian style. They have a base, shaft, and capital and are often used to bear a vertical load. \\ ANSWER: \underline{column} [prompt on \textit{pillar}]
+        \item \textit{These} open-air buildings, which are used for entertainment, often feature many columns and arches. Isidore of Seville said that \textit{these} buildings are called what they are because, unlike a traditional theater, \textit{these} structures are round. \\ ANSWER: \underline{amphitheater}
+        \item \textit{This} structure is the largest amphitheater that has ever been built. \\ ANSWER: \underline{Colosseum}
+    \end{enumerate}
 
 \end{enumerate}
 
