Adjusted directory to Rules.tex
The \include statement used to include an absolute path that was specific to my computer. It now uses a relative path, so the .tex files can be compiled on any computer with the repo downloaded.

--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -29,11 +29,11 @@
 
 \begin{document}
 
-\includepdf[pages=-]{C:/Users/prana/Documents/GitHub/Scholastic-Bowl-2024/Title Pages/Round 1 Set 2 Title Page.pdf}
+\includepdf[pages=-]{../Title Pages/Round 1 Set 2 Title Page.pdf}
 
 \maketitle
 
-\import{C:/Users/prana/Documents/GitHub/Scholastic-Bowl-2024/Rules/}{Rules.tex}
+\import{../Rules/}{Rules.tex}
 
 \newpage
 
