Added Toss-up 7

--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -103,6 +103,10 @@ Questions begin on the next page.
         \item \textit{This} structure is the largest amphitheater that has ever been built. \\ ANSWER: \underline{Colosseum}
     \end{enumerate}
 
+    % Question 7
+    \item \textbf{LITERATURE} \\ \textit{This} character owns a sword named Anaklusmos \colorbox{lightGray}{[\textbf{Ann}\textperiodcentered uck\textperiodcentered luss\textperiodcentered moce]}, which transforms from a pen when uncapped. \textit{This} character, whose mother always makes him blue-colored food, is taken by his best friend Grover Underwood to Camp Half-Blood. \textit{This} character journeys to the Underworld with Grover and Annabeth. For 10 points, name \textit{this} son of Poseidon whom Rick Riordan wrote about in \textit{The Lightning Thief}. \\ ANSWER: \underline{Percy Jackson} [prompt on \textit{Percy} or \textit{Jackson} alone]
+
+
 \end{enumerate}
 
 
