--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -104,7 +104,13 @@ Questions begin on the next page.
     \end{enumerate}
 
     % Question 7
-    \item \textbf{LITERATURE} \\ \textit{This} character owns a sword named Anaklusmos \colorbox{lightGray}{[\textbf{Ann}\textperiodcentered uck\textperiodcentered luss\textperiodcentered moce]}, which transforms from a pen when uncapped. \textit{This} character, whose mother always makes him blue-colored food, is taken by his best friend Grover Underwood to Camp Half-Blood. \textit{This} character journeys to the Underworld with Grover and Annabeth. For 10 points, name \textit{this} son of Poseidon whom Rick Riordan wrote about in \textit{The Lightning Thief}. \\ ANSWER: \underline{Percy Jackson} [prompt on \textit{Percy} or \textit{Jackson} alone]
+    \item \textbf{LITERATURE} \\ \textit{This} character owns a sword named Anaklusmos \colorbox{lightGray}{[\textbf{Ann}\textperiodcentered uck\textperiodcentered luss\textperiodcentered moce]}, which transforms from a pen when uncapped. \textit{This} character, whose mother always makes him blue-colored food, is taken by his best friend Grover Underwood to Camp Half-Blood. \textit{This} character journeys to the Underworld with Grover and Annabeth. For 10 points, name \textit{this} son of Poseidon whom Rick Riordan wrote about in \textit{The Lightning Thief}. \\ ANSWER: \underline{Percy Jackson} [prompt on \textit{Percy} or \textit{Jackson} alone] \backtrack
+    \item \textbf{MISCELLANEOUS} \\ Name these saws you might find at a woodshop.
+    \begin{enumerate}[label=\Alph*]
+        \item \textit{This} saw can be used for crosscutting or ripping, but it is typically used for making curved cuts. Unlike a jigsaw, \textit{this} saw is floor-mounted and features a flexible, looped, blade. \\ ANSWER: \underline{bandsaw}
+        \item \textit{This} saw can only make straight cuts. \textit{This} saw is usually the most dangerous saw in a woodshop, but modern safety features like the SawStop can help make it safer. \\ ANSWER: \underline{tablesaw}
+        \item \textit{This} saw can only make crosscuts but can do so at an angle. The sliding, compound version of \textit{this} saw allows larger boards to be cut and can also make bevel cuts. \\ ANSWER: \underline{Miter} saw
+    \end{enumerate}
 
 
 \end{enumerate}
