Fixed grammar in Bonus 7

--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -109,7 +109,7 @@ Questions begin on the next page.
     \begin{enumerate}[label=\Alph*]
         \item \textit{This} saw can be used for crosscutting or ripping, but it is typically used for making curved cuts. Unlike a jigsaw, \textit{this} saw is floor-mounted and features a flexible, looped, blade. \\ ANSWER: \underline{bandsaw}
         \item \textit{This} saw can only make straight cuts. \textit{This} saw is usually the most dangerous saw in a woodshop, but modern safety features like the SawStop can help make it safer. \\ ANSWER: \underline{tablesaw}
-        \item \textit{This} saw can only make crosscuts but can do so at an angle. The sliding, compound version of \textit{this} saw allows larger boards to be cut and can also make bevel cuts. \\ ANSWER: \underline{Miter} saw
+        \item \textit{This} saw can only make crosscuts but can do so at an angle. The sliding, compound version of \textit{this} saw can also make bevel cuts. \\ ANSWER: \underline{Miter} saw
     \end{enumerate}
 
 
