--- a/Rules/Player Notes/Player Notes.tex
+++ b/Rules/Player Notes/Player Notes.tex
@@ -47,21 +47,16 @@ The following are notes for competitors. Please note that your moderator may ove
 \vspace*{0.3 cm}
 On reading
 \begin{itemize}
-    \item When a player buzzes in, the moderator is to immediately stop reading.
-    \item The moderator must use a consistent and reasonably slow reading pace. The moderator must speak intelligibly and loud enough for all players to hear the question in its entirety. Players may stop the moderator at any time to request that the moderator speak louder or more clearly.
+    \item Players may stop the moderator at any time to request that the moderator speak louder or more clearly.
 \end{itemize}
 
 \vspace*{0.3 cm}
 On answers
 \begin{itemize}
-    \item The moderator is to accept only the answer indicated beneath a question.
     \item The bolded part of each answer is required to receive points. Other parts are optional.
     \item Brackets beside answers provide the moderator notes and additional information to assist with scoring (which may override the rules provided on this page).
     \item Unless the answer is a proper noun, the moderator must accept both singular and plural variants of an answer. 
     \item ``prompt'': The moderator will say \textit{prompt} or indicate in some other way that additional information is required. The moderator may prompt multiple times on the same question as long as each subsequent answer provides more information than the last and each answer is correct.
-    \item ``this/these word(s) only'': The answer (or its required parts) must be said in isolation without any modifiers to receive points.
-    \item ``equivalent/descriptive answers'': The moderator must evaluate whether the response is equiavalent in meaning to the indicated answer and award points accordingly.
-    \item ``also accept'': The moderator must also accept the indicated secondary answer(s).
 \end{itemize}
 
 \vspace*{0.3 cm}
@@ -69,18 +64,45 @@ On powerplays
 \begin{itemize}
     \item All toss-up questions contain the symbol \underline{(*)} which indicates the \textit{powerplay} cutoff.
     \item When a toss-up is answered before the powerplay cutoff, the team which answered receives 15 (instead of 10) points for that toss-up.
-    \item In the event that a player buzzes in before the powerplay cutoff, but the moderator stops reading too late, the powerplay bonus is awarded based on when the player buzzes in, not when the moderator stops reading.
 \end{itemize}
 
 \vspace*{0.3 cm}
 A sample toss-up question is shown below.
 
 \begin{mdframed}[style=sample]
-\begin{enumerate}
-    \setcounter{enumi}{7}
-    \item \textbf{SCIENCE} \\ The release of energy in \textit{these} events is described by elastic-rebound theory. \textit{These} events are detected by triangulation of P and S waves. The modified Mercalli scale measures the (*) intensity of \textit{these} events, unlike a logarithmic scale for their magnitude, which is named for Charles Richter. \textit{These} events begin at an epicenter and can cause tsunamis. For 10 points, name \textit{these} natural disasters that are caused by rupturing faults in the crust. \\ ANSWER: \underline{earthquake}
-\end{enumerate}
-\end{mdframed}
+    \begin{enumerate}
+        \setcounter{enumi}{7}
+        \item \textbf{SCIENCE} \\ The release of energy in \textit{these} events is described by elastic-rebound theory. \textit{These} events are detected by triangulation of P and S waves. The modified Mercalli scale measures the (*) intensity of \textit{these} events, unlike a logarithmic scale for their magnitude, which is named for Charles Richter. \textit{These} events begin at an epicenter and can cause tsunamis. For 10 points, name \textit{these} natural disasters that are caused by rupturing faults in the crust. \\ ANSWER: \underline{earthquake}
+    \end{enumerate}
+    \end{mdframed}
+
+\vspace*{0.3 cm}
+On timing
+\begin{itemize}
+    \item If a team answers a bonus incorrectly and more than \textbf{five} seconds remain, the other team receives the remaining time to buzz in.
+    \item If a team answers a bonus incorrectly and fewer than \textbf{five} seconds remain, the other team receives \textbf{five} seconds to buzz in.
+    \item If a toss-up question requires compuation, it will be prefaced with ``pencils and paper ready.''
+    \item If a bonus question requires compuation, only the introductory sentence will be prefaced with ``pencils and paper ready.''
+    \item For each question, teams receive the amount of time indicated in the table below to buzz in.
+
+\end{itemize}
+
+\begin{center}
+\begin{tabular}{||c|c||} 
+    \hline
+    Type & Time (in seconds) \\
+    \hline\hline
+    Toss-up & $10$ \\ 
+    \hline
+    Toss-up with computation & $30$ \\ 
+    \hline
+    Bonus & $10\times 3$ questions \\ 
+    \hline
+    Bonus with computation & $10\times 3$ questions \\
+    \hline
+\end{tabular}
+\end{center}
+
 
 
 
