Added Toss-up 8

--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -112,6 +112,9 @@ Questions begin on the next page.
         \item \textit{This} saw can only make crosscuts but can do so at an angle. The sliding, compound version of \textit{this} saw can also make bevel cuts. \\ ANSWER: \underline{Miter} saw
     \end{enumerate}
 
+    % Question 8
+    \item \textbf{MISCELLANEOUS} \\ Although \textit{this} singer was originally born Reginald Dwight, he was later inspired by his old band \textit{Bluesology} to change his name. Just after presenting \textit{this} singer with the National Humanities Medal, President Joe Biden said ``it's all his fault [the US] is spending six billion dollars in taxpayer money to fight AIDS.'' For 10 points, name \textit{this} singer of \textit{I'm Still Standing}, \textit{Crocodile Rock}, and \textit{Rocket Man}. \\ ANSWER: \underline{Elton John} \backtrack
+
 
 \end{enumerate}
 
